[add] #1 string 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,42 @@
 <resources>
     <string name="app_name">AND-ANDROID</string>
+
+    <!-- bottom navi -->
+    <string name="bnv_home">홈</string>
+    <string name="bnv_search">검색</string>
+    <string name="bnv_my">MY</string>
+
+    <!-- common -->
+    <string name="register">회원가입</string>
+    <string name="password_show">show</string>
+    <string name="password_hide">hide</string>
+    <string name="social_account_information">· SNS계정으로 간편하게 가입하여 서비스를 이용하실 수 있습니다. 기존 POOQ 계정 또는 Wavve 계정과는 연동되지 않으니 이용에 참고하세요.</string>
+
+    <!-- register -->
+    <string name="register_title">이메일과 비밀번호만으로\nWavve를 즐길 수 있어요!</string>
+    <string name="register_email_hint">wavve@example.com</string>
+    <string name="register_email_information">로그인, 비밀번호 찾기, 알림에 사용되니 정확한 이메일을 입력해 주세요.</string>
+    <string name="register_password">Wavve 비밀번호 설정</string>
+    <string name="register_password_information">비밀번호는 8~20자 이내로 영문 대소문자, 숫자, 특수문자 중 3가지 이상 혼용하여 입력해 주세요.</string>
+    <string name="register_social_account">또는 다른 서비스 계정으로 가입</string>
+    <string name="register_button">Wavve 회원가입</string>
+
+    <!-- login -->
+    <string name="login_title">Wavve</string>
+    <string name="login_id_hint">이메일 주소 또는 아이디</string>
+    <string name="login_password_hint">비밀번호</string>
+    <string name="login_button">로그인</string>
+    <string name="login_find_id">아이디 찾기</string>
+    <string name="login_find_password">비밀번호 재설정</string>
+    <string name="login_social_account">또는 다른 서비스 계정으로 로그인</string>
+    
+    <!-- my -->
+    <string name="my_nickname">%s님</string>
+    <string name="my_purchase_event">첫 결제 시 첫 달 100원!</string>
+    <string name="my_purchase">구매하기</string>
+    <string name="my_purchase_ticket">현재 보유하신 이용권이 없습니다.</string>
+    <string name="my_view_history">전체 시청내역</string>
+    <string name="my_view_history_none">시청내역이 없어요.</string>
+    <string name="my_interest_program">관심 프로그램</string>
+    <string name="my_interest_program_none">관심 프로그램이 없어요.</string>
 </resources>
