--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,20 @@
     <string name="my_view_history_none">시청내역이 없어요.</string>
     <string name="my_interest_program">관심 프로그램</string>
     <string name="my_interest_program_none">관심 프로그램이 없어요.</string>
+
+    <!-- home -->
+    <string name="home_category_new_classic">뉴클래식</string>
+    <string name="home_category_drama">드라마</string>
+    <string name="home_category_variety_show">예능</string>
+    <string name="home_category_movie">영화</string>
+    <string name="home_category_animation">애니</string>
+    <string name="home_category_oversea_series">해외 시리즈</string>
+    <string name="home_category_culture">시사교양</string>
+    <string name="home_category_kids">키즈</string>
+    <string name="home_category_movie_plus">영화플러스</string>
+    <string name="home_category_live">LIVE</string>
+
+    <string name="home_banner_page_count">%s/%s</string>
+    <string name="home_editor_recommend_title">믿고 보는 웨이브 에디터 추천작</string>
+    <string name="home_today_top_ranking_title">오늘의 TOP 20</string>
 </resources>
